[gd_scene load_steps=5 format=3 uid="uid://xsep506qi0a0"]

[ext_resource type="Texture2D" uid="uid://co1bnv867as5n" path="res://Sprites/GUI/Character_Panel.png" id="1_ijqdy"]
[ext_resource type="Script" path="res://Scripts/GUI/save_game_menu.gd" id="1_lg2k4"]
[ext_resource type="Script" path="res://Scripts/GUI/button.gd" id="2_etwk7"]
[ext_resource type="Resource" uid="uid://mrvg6t86edn" path="res://Resources/save_game.tres" id="2_voxen"]

[node name="SaveGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lg2k4")
save_game_resource = ExtResource("2_voxen")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_ijqdy")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 135.0
offset_top = 113.0
offset_right = 1015.0
offset_bottom = 541.0

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/CenterContainer"]
layout_mode = 2

[node name="File1" type="Button" parent="NinePatchRect/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(880, 140)
layout_mode = 2
text = "Empty Slot"
script = ExtResource("2_etwk7")

[node name="File2" type="Button" parent="NinePatchRect/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(880, 140)
layout_mode = 2
text = "Empty Slot"

[node name="File3" type="Button" parent="NinePatchRect/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(880, 140)
layout_mode = 2
text = "Empty Slot"

[connection signal="pressed" from="NinePatchRect/CenterContainer/GridContainer/File1" to="." method="_on_file_1_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/GridContainer/File2" to="." method="_on_file_2_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/GridContainer/File3" to="." method="_on_file_3_pressed"]
